# simpleray

./: .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt
src/: camera.c  camera.h  image.c  image.h  main.c  math.c  math.h  ray.c  ray.h  scene.c  scene.h  sphere.c  sphere.h  vector.c  vector.h
